# WinthorpeBot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_broker_spine.py  test_cap_calibration.py  test_deliberate.py  test_dry_run_broker.py  test_engine.py  test_expected_cap.py  test_levels.py  test_market_stream.py  test_mcp.py  test_persistence.py  test_plan_and_risk.py  test_process_guard.py  test_service.py  test_volume_profile.py
winthorpe/: config.py
winthorpe/agent/: deliberate.py
winthorpe/broker/: __init__.py  models.py  options.py  session.py  tastytrade_broker.py
winthorpe/data/: bars.py  gex_engine.py  gex_stream.py  json_store.py  market_stream.py  process_guard.py  spot_source.py
winthorpe/engine/: engine.py  market.py  service.py
winthorpe/journal/: journal.py
winthorpe/levels/: cap_calibration.py  expected_cap.py  structural.py  volume_profile.py
winthorpe/mcp/: server.py
winthorpe/plan/: schema.py
winthorpe/risk/: limits.py  sizing.py
